tests/ui/traits/const-traits/const-fns-are-early-bound.stderr
error[E0277]: the trait bound `fn() {foo}: const FnOnce()` is not satisfied
  --> $DIR/const-fns-are-early-bound.rs:31:17
   |
LL |     is_const_fn(foo);
   |     ----------- ^^^ the trait `FnOnce()` is not implemented for fn item `fn() {foo}`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `is_const_fn`
  --> $DIR/const-fns-are-early-bound.rs:25:12
   |
LL |     fn is_const_fn<F>(_: F)
   |        ----------- required by a bound in this function
LL |     where
LL |         F: const FnOnce<()>,
   |            ^^^^^^^^^^^^^^^^ required by this bound in `is_const_fn`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
